# pdf-parse-bench

./: .env.example  .gitignore  CLAUDE.md  README.md  benchmark_pipeline.py  config.yaml  formula_viewer.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
artifacts/: latest
data/: formulas.json
data/2026-formulas-q1/ground_truth/: 000.json  001.json  003.json  005.json  007.json  008.json  011.json  015.json  017.json  019.json  026.json  027.json  031.json  032.json  038.json  039.json  041.json  045.json  046.json  048.json  050.json  051.json  054.json  055.json  056.json  058.json  059.json  060.json  061.json  064.json  066.json  067.json  068.json  069.json  072.json  073.json  075.json  077.json  078.json  082.json  (+7 more)
data/2026-q1-formulas-only/ground_truth/: 002.json  004.json  006.json  009.json  010.json  012.json  013.json  014.json  016.json  018.json  020.json  021.json  022.json  023.json  024.json  025.json  028.json  029.json  030.json  033.json  034.json  035.json  036.json  037.json  040.json  042.json  043.json  044.json  047.json  049.json  052.json  053.json  057.json  062.json  063.json  065.json  070.json  071.json  074.json  076.json  (+13 more)
data/2026-q1-tables-only/ground_truth/: 006.json  007.json  012.json  015.json  024.json  025.json  028.json  033.json  034.json  038.json  039.json  041.json  043.json  050.json  053.json  057.json  062.json  064.json  072.json  074.json  075.json  077.json  081.json  084.json  085.json  089.json  090.json  092.json  097.json
data/2026-tables-q1/ground_truth/: 000.json  008.json  010.json  013.json  017.json  018.json  019.json  021.json  040.json  042.json  046.json  049.json  059.json  060.json  066.json  078.json  079.json  082.json  083.json  091.json  093.json  096.json  099.json
data/tables_only/ground_truth/: 001.json  002.json  003.json  004.json  005.json  009.json  011.json  014.json  016.json  020.json  022.json  023.json  026.json  027.json  029.json  030.json  031.json  032.json  035.json  036.json  037.json  044.json  045.json  047.json  048.json  051.json  052.json  054.json  055.json  056.json  058.json  061.json  063.json  065.json  067.json  068.json  069.json  070.json  071.json  073.json  (+8 more)
old/: human_study.ipynb
old/parser/: CLAUDE.md  adobe.py  dots_ocr.py  gemini.py  llamaparse.py  marker.py  mathpix.py  megaparse.py  mineru.py  nanonets_ocr_s.py  openai.py  pypdf.py  unstructured.py
old/parser/core/: __init__.py  base.py  registry.py
parsers/chandra/: README.md  __main__.py
parsers/claude_sonnet/: README.md  __main__.py
parsers/deepseek_ocr/: README.md  __main__.py
parsers/dots_ocr/: README.md  __main__.py
parsers/gemini/: README.md  base_gemini_parser.py
parsers/gemini/gemini_2_5_flash/: __main__.py
parsers/gemini/gemini_2_5_pro/: __main__.py
parsers/gemini/gemini_3_pro/: __main__.py
parsers/got_ocr2/: README.md  __main__.py  got_ocr2_parser.py
parsers/grobid/: README.md  __main__.py
parsers/lighton_ocr/: README.md  __main__.py
parsers/llamaparse/: README.md  __main__.py
parsers/mathpix/: README.md  __main__.py
parsers/mineru/: README.md  __main__.py
parsers/mistral/: README.md  __main__.py
parsers/monkey_ocr/: Dockerfile  README.md  __main__.py  docker-compose.yml  download_models.sh
parsers/nanonets_ocr_s/: README.md  __main__.py
parsers/olmocr/: README.md  __main__.py
parsers/openai/: README.md  base_openai_parser.py
parsers/openai/gpt5/: __main__.py
parsers/openai/gpt5mini/: __main__.py
parsers/openai/gpt5nano/: __main__.py
parsers/openai/gpt_5/: __main__.py
parsers/openai/gpt_5_mini/: __main__.py
parsers/openai/gpt_5_nano/: __main__.py
parsers/openrouter/: README.md  base_openrouter_parser.py
parsers/openrouter/gemini_2_5_flash/: __main__.py
parsers/openrouter/gemini_2_5_pro/: __main__.py
parsers/openrouter/gemini_3_flash/: __main__.py
parsers/openrouter/gemini_3_pro/: __main__.py
parsers/openrouter/glm_4_5v/: __main__.py
parsers/openrouter/gpt_5_2/: __main__.py
parsers/openrouter/gpt_5_mini/: __main__.py
parsers/openrouter/gpt_5_nano/: __main__.py
parsers/openrouter/opus_4_6/: __main__.py
parsers/openrouter/qwen3_vl/: __main__.py
parsers/openrouter/sonnet_4_6/: __main__.py
parsers/paddle_ocr_vl/: README.md  __main__.py
parsers/pp_structure_v3_3/: README.md  __main__.py
parsers/pymupdf/: __main__.py
parsers/pymupdf4llm/: README.md  __main__.py
parsers/pypdf/: README.md  __main__.py
parsers/qwen3_vl/: README.md  __main__.py
src/: config.py  html_generator.py  single_page_generator.py  style_generator.py
src/eval/: __init__.py  evaluators.py  extract_segments_from_md.py  extract_segments_from_md_llm.py  metrics.py
src/parser/: __init__.py  adobe.py  docling.py  got_ocr2.py  mistral.py  ocrflux.py  openai.py  pymupdf.py  unstructured.py
src/parser/core/: base.py  registry.py
src/pdf_benchmark/eval/: evaluators.py
src/pdf_benchmark/extraction/: segment_extractor.py
src/pdf_benchmark/pipeline/: cli.py  pipeline.py
src/pdf_benchmark/synth_pdf/: pdf_generator.py
src/pdf_parse_bench/: __init__.py
src/pdf_parse_bench/eval/: __init__.py  evaluators.py  llm_judge.py  results.py
src/pdf_parse_bench/extraction/: segment_extractor.py
src/pdf_parse_bench/pipeline/: __init__.py  cli.py  pipeline.py
src/pdf_parse_bench/synth_pdf/: __init__.py  __main__.py  assembler.py  compiler.py  content.py  latex.py  latex_config.py  pdf_generator.py  pipeline.py  random_content.py  style_config.py
src/pdf_parse_bench/utilities/: data.py  formula_viewer.py  generate_benchmark_table.py  vlm_prompt.py
src/pipeline/: __init__.py  config.py  pipeline.py
src/synthetic_pdf/: CLAUDE.md  __init__.py  config.py  generators.py  html_builder.py  pdf_generator.py  pdf_service.py  style_config.py  validation.py
src/synthetic_pdf/html/: __init__.py  pdf_generator.py  style_config.py  validation.py
src/synthetic_pdf/latex/: __init__.py  (+3 more)
src/utilities/: __init__.py  formula_normalizer.py  formula_renderer.py  segment_extractor.py
src/viewer/: formula_viewer.py
tests/: test_generators.py
(+48 files in other folders)
