[project]
name = "pdf-parser-benchmark"
version = "0.1.0"
description = "Benchmark suite for PDF-to-text parsers with built-in test dataset"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "rich>=14.1.0",
    # Evaluation & AI
    "openai>=1.99.0",
    "google-genai>=1.46.0",
    "mistralai>=1.9.0",
    "requests>=2.32.0",
    "levenshtein>=0.27.1",
    "nltk>=3.9.1",
    # Used for Unicode to LaTeX conversion in formula rendering
    "pylatexenc>=2.10",
]

[project.optional-dependencies]
# Synthetic PDF generation - for creating test documents
synth_pdf = [
    "faker>=37.11.0",
    "duckdb>=1.4.1",
]

# PDF Parsers - install individually as needed
pymupdf = [
    "pymupdf4llm>=0.0.17",
]

llamaparse = [
    "llama-cloud-services>=0.6.76"
]

mathpix = [
    "mpxpy>=0.0.18"
]

got_ocr2 = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "transformers==4.37.2",
    "tiktoken>=0.6.0",
    "verovio>=4.3.1",
    "accelerate>=0.28.0",
    "pymupdf>=1.24.0",
]

nanonets_ocr_s = [
    "torch>=2.0.1",
    "transformers>=4.37.0",
    "pymupdf>=1.24.0",
    "accelerate>=0.28.0",
]

# All extras combined (parsers excluded - install individually as needed)
all = [
    "pdf-parser-benchmark[synth_pdf]",
]

deepseek_ocr = [
    "triton-kernels",
    "vllm",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
]

dots_ocr = [
    "torch>=2.0.1",
    "transformers>=4.37.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "qwen-vl-utils>=0.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_benchmark", "parsers"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "pdf_benchmark/data"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/data",
]

[[tool.uv.index]]
name = "vllm-nightly"
url = "https://wheels.vllm.ai/nightly"
explicit = true

[tool.uv]
conflicts = [
    [
        { extra = "got_ocr2" },
        { extra = "deepseek_ocr" },
    ],
]

[tool.uv.sources]
triton-kernels = { git = "https://github.com/triton-lang/triton.git", subdirectory = "python/triton_kernels", rev = "v3.5.0" }
vllm = { index = "vllm-nightly" }
